# memorule

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: README.md  setup.md  usage.md
src/memorule/: __init__.py  config.py  exceptions.py  protocols.py  types.py
src/memorule/cli/: __init__.py  init.py  main.py  policy_wizard.py  scaffold.py  validate.py
src/memorule/context/: __init__.py  builder.py  session.py
src/memorule/llm/: __init__.py  invoke.py
src/memorule/pipeline/: __init__.py  context.py  engine.py  stage.py
src/memorule/pipeline/stages/: __init__.py  conflict_resolution.py  deduplication.py  embedding_generation.py  memory_extraction.py  metadata_enrichment.py  persistence.py  policy_evaluation.py  similarity_search.py
src/memorule/policy/: __init__.py  config.py  loader.py
src/memorule/prompts/: __init__.py  parsing.py  templates.py
src/memorule/retrieval/: __init__.py  retriever.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_cli.py  test_invoke.py  test_parsing.py  test_policy_config.py  test_prompts.py  test_stages.py
